--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -1,34 +1,47 @@
-.topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
-}
+header {
+    margin: 7px;
+    background-color: #ffffff;
+    font-family: arial;
+    font-size: 17px;
+  }  
 
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 10px 10px;
-  text-decoration: none;
-  font-size: 17px;
-}
+  .topnav {
+    overflow: hidden;
+    background-color: #e9e9e9;
+  }
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 10px 10px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #2196F3;
+    color: white;
+    text-align: center;
+  }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+  .topnav a.active_not {
+    background-color: #818181;
+    color: rgb(255, 255, 255);
+  }
+  
+  .topnav img {
+    border-radius: 50%;
+    border: 5px solid rgb(104, 104, 104);
+  }  
 
-.topnav a.active {
-  background-color: #2196F3;
-  color: white;
-}
-
-.topnav a.active_not {
-  background-color: #818181;
-  color: rgb(255, 255, 255);
-}
-
-.topnav img {
-  border-radius: 50%;
-  border: 5px solid rgb(104, 104, 104);
-}
+  h2 {
+    margin: 0px 485px;
+    text-align: center;
+  }
